<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="onboardingSixVM" type="com.llapp.app.modules.onboardingsix.data.viewmodel.OnboardingSixVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearOnboardingSix"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageIllustrations"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_256pxh"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_129pxv"
            android:layout_width="@dimen/_215pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_illustrations_256x215"
            tools:ignore="ContentDescription" tools:src="@drawable/img_illustrations_256x215"/>

        <com.asksira.loopingviewpager.indicator.CustomShapePagerIndicator
            android:id="@+id/indicatorCheckmark"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_96pxv"
            android:layout_width="wrap_content"
            app:drawable_normal="@drawable/indicator_unselected_bg_gray_900_33_radius_8"
            app:drawable_selected="@drawable/indicator_selected_bg_orange_800_radius_8"
            app:indicator_size="@dimen/_8pxh" app:indicator_spacing="@dimen/_8pxh"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtTakeyourtime"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:singleLine="true"
            android:text="@{onboardingSixVM.onboardingSixModel.txtTakeyourtime}"
            style="@style/txtFredokamedium22" tools:text="@string/msg_take_your_time"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtDevelopahabit"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:text="@{onboardingSixVM.onboardingSixModel.txtDevelopahabit}"
            style="@style/txtFredokaregular15" tools:text="@string/msg_develop_a_habit"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnChooseALanguageOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_46pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/msg_choose_a_langua"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/msg_choose_a_langua"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtAlreadyafillo"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{onboardingSixVM.onboardingSixModel.txtAlreadyafillo}"
            style="@style/txtFredokaregular15_1" tools:text="@string/msg_already_a_fillo"/>
    </LinearLayout>
</layout>
