<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signupVM" type="com.llapp.app.modules.signup.data.viewmodel.SignupVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearSignup"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp" style="@style/groupStyledeep_purple_800">
            <LinearLayout android:id="@+id/linearColumnticket"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_18pxv"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <LinearLayout android:id="@+id/linearTimeindicator"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageTicket"
                        android:layout_height="@dimen/_11pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_width="@dimen/_28pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_ticket"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_ticket"/>
                    <ImageView android:id="@+id/imageSignal"
                        android:layout_height="@dimen/_11pxh"
                        android:layout_marginStart="@dimen/_230pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_66pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_signal"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_signal"/>
                </LinearLayout>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearTool"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_33pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageVector"
                        android:layout_height="@dimen/_13pxh"
                        android:layout_marginBottom="@dimen/_5pxv"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="@dimen/_5pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtCompleted110"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_122pxh"
                        android:layout_weight="0.9"
                        android:layout_width="0dp"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:singleLine="true"
                        android:text="@{signupVM.signupModel.txtCompleted110}"
                        style="@style/txtFredokamedium17" tools:text="@string/lbl_signup"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtCreateanAccou"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_41pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:singleLine="true"
            android:text="@{signupVM.signupModel.txtCreateanAccou}"
            style="@style/txtFredokamedium22" tools:text="@string/msg_create_an_accou"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtPhoneNumber"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{signupVM.signupModel.txtPhoneNumber}"
            style="@style/txtFredokaregular15_2" tools:text="@string/lbl_first_name"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_900_0c_radius_16"
            android:ellipsize="end"
            android:hint="@string/msg_placeholder_tex"
            android:id="@+id/etField" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={signupVM.signupModel.etFieldValue}"
            android:textColorHint="@color/gray_700_7f"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtPhoneNumberOne"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{signupVM.signupModel.txtPhoneNumberOne}"
            style="@style/txtFredokaregular15_2" tools:text="@string/lbl_last_name"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_900_0c_radius_16"
            android:ellipsize="end"
            android:hint="@string/msg_placeholder_tex"
            android:id="@+id/etFieldOne" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={signupVM.signupModel.etFieldOneValue}"
            android:textColorHint="@color/gray_700_7f"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtPhoneNumberTwo"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{signupVM.signupModel.txtPhoneNumberTwo}"
            style="@style/txtFredokaregular15_2" tools:text="@string/lbl_email_address"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_900_0c_radius_16"
            android:ellipsize="end"
            android:hint="@string/msg_placeholder_tex"
            android:id="@+id/etFieldTwo" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={signupVM.signupModel.etFieldTwoValue}"
            android:textColorHint="@color/gray_700_7f"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnContinue"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_continue"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_continue"/>
        <LinearLayout android:gravity="start" android:id="@+id/linearOr"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <View android:background="@color/gray_900_34"
                android:id="@+id/lineLine183"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_weight="0.47" android:layout_width="0dp"/>
            <TextView android:ellipsize="end" android:id="@+id/txtOr"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_weight="0.06" android:layout_width="0dp"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{signupVM.signupModel.txtOr}"
                style="@style/txtFredokaregular15_2" tools:text="@string/lbl_or"/>
            <View android:background="@color/gray_900_34"
                android:id="@+id/lineLine184"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_weight="0.47" android:layout_width="0dp"/>
        </LinearLayout>
        <ImageView android:id="@+id/imageSocial"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_50pxh"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="@dimen/_327pxh"
            android:scaleType="fitXY" android:src="@drawable/img_social"
            tools:ignore="ContentDescription" tools:src="@drawable/img_social"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtAlreadyyoumem"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{signupVM.signupModel.txtAlreadyyoumem}"
            style="@style/txtFredokaregular17" tools:text="@string/msg_already_you_mem"/>
    </LinearLayout>
</layout>
